--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
         <div class="bottom-left">
           <div>
 
-            <a href="tel:+919447857933" class="btn btn-grad2 btn-sm">
+            <a href="tel:+917994165455" class="btn btn-grad2 btn-sm">
 
               <svg class="contactme" width="20px" height="20px" viewBox="0 0 24 24" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
@@ -556,7 +556,7 @@
 
 
 
-            <a href="https://wa.me/+917994165455" class="btn btn-grad2 btn-sm">
+            <a href="https://wa.me/+919447857933" class="btn btn-grad2 btn-sm">
 
 
 
@@ -663,7 +663,7 @@
         <div class="container-fluid-not">
 
 
-          <a href="https://wa.me/+917994165455 " class="socialbox">
+          <a href="https://wa.me/+919447857933" class="socialbox">
             <div class="card contact-card1 whitebg">
 
               <div class="card-body">
@@ -688,7 +688,7 @@
 
 
                     </h4>
-                    <h3 class="cdata">+91 799 4165 455 </h3>
+                    <h3 class="cdata">+91 944 7857 933 </h3>
 
 
                   </div>
@@ -706,7 +706,7 @@
 
             </div>
           </a>
-          <a href="tel:+919447857933" class="socialbox whitebg">
+          <a href="tel:+917994165455" class="socialbox whitebg">
             <div class="card contact-card1  whitebg ">
 
               <div class="card-body">
@@ -729,7 +729,8 @@
 
 
                     </h4>
-                    <h3 class="cdata">+91 944 7857 933 </h3>
+                    <h3 class="cdata">+91 799 4165 455 </h3>
+
 
 
                   </div>
@@ -1245,20 +1246,20 @@
               <!-- <img src="logo.jpg" class="img-fluid"> -->
               <h1 class="text">Our Services</h1>
               <p class="col mt-2 mx-auto fs-5 text">
-                TMT500D BARS |
-                PVC|UPVC|CPVC|ASTM| Pipes and fittings
-                Supreme | Astral
-                WaterTanks | Astral | Goodwill..
-                Pumps crompten| Tex | vgaurd|bindhu|Lekshmi
-                JSW & jindal roofing SHEETS
-                GP sheet | rollsheets
-                Sunbag sheets | coating sheet
-                Cements | RAMCO | ACC| SANKER
-                White Cement | wall putty
-                Wedmish | tata chainlink |variety chainlink
-                Bathware products | RAK | Hindware | suncream
-                Hardware items hinges | locks | handles and other item's
-                GP tubes |appollo |Jain</p>
+                TMT500D Bars | PVC | UPVC | CPVC | ASTM | Pipes And Fittings Supreme | Astral |
+                Water Tanks | Astral | Goodwill.. |
+                Pumps Crompten | Tex | V Gaurd | Bindhu | Lekshmi |
+                JSW & Jindal Roofing Sheets |
+                GP Sheet | Roll Sheets |
+                Sunbag Sheets | Coating Sheet |
+                Cements | Ramco | ACC | Sanker |
+                White Cement | Wall Putty |
+                Wedmish | Tata Chainlink | Variety Chainlink |
+                Bathware Products | RAK | Hindware | Suncream |
+                Hardware Items Hinges | Locks | Handles And Other Item's |
+                GP Tubes | Appollo | Jain
+              </p>
+
               <!-- <div class="d-inline-flex gap-2 mb-5">
                     <button class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill" type="button">
                       Call to action
